tests/semantic/fail/nil-7.tiger
let
	type a = array of int
	var a := a [0]
in
	a := nil
end
